<resources>
    <string name="app_name">UFABC Barganha</string>
    <string name="title_activity_feed">FeedActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_title">Produtos</string>
    <string name="housing_title">Moradia</string>
    <string name="food_title">Comida</string>
    <string name="email">Email institucional</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="register">Registrar</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="login_title">Login</string>
    <string name="logo_description">Logo</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_teste">teste</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="placeholder_title">Title here</string>
    <string name="placeholder_description">An description text go here, blablabla, Ipsum lore blablabla!!</string>
    <string name="description_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
        nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="insterest">Tenho Interesse</string>
    <string name="bargain">Barganhar</string>
    <string name="complete_name">Nome completo</string>
    <string name="confirm_email">Confirme o email</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="check_your_email">Verifique seu email</string>
    <string name="register_text">Bem-vindo ao clube! Para ter acesso à nossa plataforma, precisamos de alguns dados
    </string>
    <string name="forgot_password_text">Digite o seu e-mail institucional. Enviaremos um e-mail para você recuperar
        sua conta!
    </string>
    <string name="send_email">Enviar email</string>
    <string name="my_posts">Meus Anúncios</string>
    <string name="my_interests">Meus Interesses</string>
    <string name="settings">Configurações</string>
    <string name="logout">Sair</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_create_post">CreatePostActivity</string>
    <string name="create_post_title">O que você está anunciando?</string>
    <string name="create_post_price">Preço</string>
    <string name="create_post_place">Localização</string>
    <string name="create_post_description">Descreva seu anúcio (opcional)</string>
    <string name="create_post_button">Anunciar</string>
    <string name="create_post">Criar Anúncio</string>
    <string name="detalhes">Detalhes</string>
    <string name="crate_an_account">Criar uma conta</string>
    <string name="recover_pass">Recupere sua senha</string>
    <string name="contact_phone">Telefone</string>
    <string name="enable_notifications">Habilitar Notificações</string>
    <string name="enable_emails">Receber emails</string>
    <string name="save">Salvar</string>
    <string name="remove_interest">Perdi o interesse =(</string>
    <string name="change_password">Mudar Senha</string>
    <string name="change_user_data">Mudar Dados</string>
    <string name="fill_credentials">Por favor, preencha todos os campos!</string>
    <string name="wrong_credentials">Falha no login :(</string>
    <string name="succesful_login">Successfully logged in</string>
    <string name="enter_credentials">Please enter the credentials!</string>
    <string name="succesful_signup">You successfully signed in!</string>
    <string name="an_error_occured">Ops! Un unkown error occured!</string>
    <string name="verify_email">Por favor, verifique seu email!</string>
    <string name="valid_email">Por favor, preencha um email valido. O acesso é restrito à comunidade acadêmica da UFABC</string>
    <string name="different_emails">Os emails preenchidos diferem</string>
    <string name="different_passwords">As senhas preenchidas diferem!</string>
    <string name="empty_name">Por favor, preencha seu nome</string>
    <string name="camera_permission_denied_message">Conceda a permissão da câmera para poder tirar a foto.</string>
    <string name="no_camera_app">Não há aplicativo para fotografia.</string>
    <string name="no_image">Nenhuma imagem recebida</string>
    <string name="choose_image_app">Escolha o app que deseja para selecionar sua foto.</string>
    <string name="create_post_success">Post criado com sucesso!</string>
    <string name="create_post_failure">Erro ao criar post!</string>
    <string name="favorite_post_failure">Erro ao favoritar post</string>
    <string name="favorite_post_success">Sucesso ao favoritar post</string>
    <string name="unfavorite_post_failure">Erro ao desfavoritar post</string>
    <string name="unfavorite_post_success">Sucesso ao desfavoritar post</string>
    <string name="create_post_missing_location">Você precisa selecionar uma localização</string>



    <string name="empty_mail">Por favor, preencha seu email</string>
    <string name="add_photo">Adicionar Foto</string>
    <string name="hint_phone">Telefone</string>
    <string name="create_post_phone">Telefone</string>
    <string name="remove_post">Remover</string>
    <string name="removed_with_success">Post Removido</string>
    <string name="remove_failure">Falha ao remover</string>
    <string name="create_post_missing_fields">Por favor, preencha todos os campos e anexe sua foto</string>


</resources>
