<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/general_space">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="@dimen/general_space">

        <EditText
            android:id="@+id/create_post_title"
            android:inputType="textAutoComplete"
            android:hint="@string/create_post_title"
            android:textColorHint="@color/white"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/create_post_price"
            android:inputType="numberDecimal"
            android:hint="@string/create_post_price"
            android:textColorHint="@color/white"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_post_title"/>

        <EditText
            android:id="@+id/create_post_place"
            android:inputType="textPostalAddress"
            android:hint="@string/create_post_place"
            android:textColorHint="@color/white"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_post_price"/>


        <MultiAutoCompleteTextView
            android:id="@+id/create_post_description"
            android:hint="@string/create_post_description"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimary"
            android:background="@color/white"
            android:textSize="16dp"
            android:minLines="10"
            android:padding="@dimen/general_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_post_place"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_photo_button"
            app:backgroundTint="@color/colorPrimaryDark"
            android:tint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_post_description"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_input_add"/>

        <Button
            android:id="@+id/create_post_button"
            android:text="@string/create_post_button"
            android:background="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_post_description"
            android:padding="@dimen/general_space"
            android:layout_alignParentRight="true"
            app:srcCompat="@android:drawable/ic_input_add"
            android:layout_margin="@dimen/general_space"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>