<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                tools:context=".login.LoginActivity"
                android:background="@color/black">

    <!-- Video do backgorund -->
    <include layout="@layout/video_background_login"/>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

        <ImageView
                android:id="@+id/imgView_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_barganha_logo"
                android:contentDescription="@string/logo_description"
                android:shadowColor="@color/white"
                android:shadowDx="10.5"
                android:shadowDy="10.3"
                android:shadowRadius="1.6"/>

        <RelativeLayout
                android:id="@+id/rellay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgView_logo"
                android:visibility="gone">

            <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:fontFamily="sans-serif-medium"
                    android:text="@string/app_name"
                    android:textColor="@color/ufabcGreen"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:shadowColor="@color/black"
                    android:shadowDx="10.5"
                    android:shadowDy="10.3"
                    android:shadowRadius="1.6"/>

            <LinearLayout
                    android:id="@+id/linlay1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_login"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:fontFamily="sans-serif-light"
                            android:text="@string/email"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:shadowColor="@color/black"
                            android:shadowDx="1.5"
                            android:shadowDy="1.3"
                            android:shadowRadius="1.6"/>

                    <EditText
                            android:id="@+id/emailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/edit_text_shape"
                            app:fontFamily="sans-serif-light"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:inputType="textEmailAddress"
                            android:shadowColor="@color/black"
                            android:shadowDx="1.5"
                            android:shadowDy="1.3"
                            android:shadowRadius="1.6"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:fontFamily="sans-serif-light"
                            android:text="@string/password"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:shadowColor="@color/black"
                            android:shadowDx="1.5"
                            android:shadowDy="1.3"
                            android:shadowRadius="1.6"/>

                    <EditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/edit_text_shape"
                            app:fontFamily="sans-serif-light"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:textColor="@color/black"
                            android:inputType="textPassword"
                            android:textSize="15sp"
                            android:shadowColor="@color/black"
                            android:shadowDx="1.5"
                            android:shadowDy="1.3"
                            android:shadowRadius="1.6">
                    </EditText>


                </LinearLayout>

            </LinearLayout>

            <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_below="@+id/linlay1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/button_shape"
                    app:fontFamily="sans-serif-medium"
                    android:paddingLeft="70dp"
                    android:paddingRight="70dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:shadowColor="@color/black"
                    android:shadowDx="1.5"
                    android:shadowDy="1.3"
                    android:shadowRadius="1.6">

            </Button>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/rellay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone">

        <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                app:fontFamily="sans-serif"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"/>

        <Button
                android:id="@+id/forgotPassButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@color/transparent"
                app:fontFamily="sans-serif"
                android:text="@string/forgot_password"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6"/>

    </RelativeLayout>

</RelativeLayout>
