<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                tools:context=".login.RegisterActivity"
                android:background="@color/black">

    <!-- Video do backgorund -->
    <include layout="@layout/video_background_login"/>

    <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgView_logo"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout android:id="@+id/messageRegister"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:fontFamily="sans-serif-medium"
                    android:text="@string/crate_an_account"
                    android:textColor="@color/ufabcGreen"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:shadowDx="10.5"
                    android:shadowDy="10.3"
                    android:shadowRadius="1.6"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/messageRegister"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fontFamily="sans-serif-light"
                        android:text="@string/complete_name"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:shadowColor="@color/black"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_shape"
                        app:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:inputType="textPersonName"
                        android:shadowColor="@color/black"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fontFamily="sans-serif-light"
                        android:text="@string/email"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:shadowColor="@color/black"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"/>

                <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_shape"
                        app:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:inputType="textEmailAddress"
                        android:shadowColor="@color/black"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fontFamily="sans-serif-light"
                        android:text="@string/confirm_email"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:shadowColor="@color/black"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"/>

                <EditText
                        android:id="@+id/confirmEmailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_shape"
                        app:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:inputType="textEmailAddress"
                        android:shadowColor="@color/black"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fontFamily="sans-serif-light"
                        android:text="@string/password"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:shadowColor="@color/black"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"/>

                <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_shape"
                        app:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:inputType="textPassword"
                        android:shadowColor="@color/black"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fontFamily="sans-serif-light"
                        android:text="@string/confirm_password"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:shadowColor="@color/black"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6"/>

                <EditText
                        android:id="@+id/confirmPasswordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_shape"
                        app:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/black"
                        android:inputType="textPassword"
                        android:textSize="15sp"
                        android:shadowColor="@color/black"
                        android:shadowDx="1.5"
                        android:shadowDy="1.3"
                        android:shadowRadius="1.6">
                </EditText>


            </LinearLayout>

        </LinearLayout>

        <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/linlay1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_shape"
                app:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:shadowColor="@color/black"
                android:shadowDx="1.5"
                android:shadowDy="1.3"
                android:shadowRadius="1.6">

        </Button>
    </RelativeLayout>
</RelativeLayout>